--- a/data/ui/main.ui
+++ b/data/ui/main.ui
@@ -8,14 +8,14 @@
     </object>
 
     <template class="MainWindow" parent="GtkApplicationWindow">
-        <property name="visible">True</property>
-        <property name="window_position">center</property>
-        <property name="default_width">400</property>
-        <property name="default_height">150</property>
+        <property name="gravity">GDK_GRAVITY_CENTER</property>
+        <property name="width_request">400</property>
+        <property name="height_request">400</property>
         <child type="titlebar">
             <object class="GtkHeaderBar" id="headerbar">
                 <property name="visible">True</property>
                 <property name="title">Upload Screenshot</property>
+                <property name="subtitle">Screenshot Preview</property>
                 <child>
                     <object class="GtkRevealer" id="cancel_reveal">
                         <property name="visible">True</property>
@@ -46,6 +46,44 @@
                         <property name="pack_type">end</property>
                     </packing>
                 </child>
+                <child>
+                    <object class="GtkRevealer" id="save_reveal">
+                        <property name="visible">True</property>
+                        <property name="transition_type">slide-left</property>
+                        <property name="reveal_child">True</property>
+                        <child>
+                            <object class="GtkBox">
+                                <property name="visible">True</property>
+                                <property name="orientation">horizontal</property>
+                                <property name="spacing">6</property>
+                                <child>
+                                    <object class="GtkButton">
+                                        <property name="visible">True</property>
+                                        <signal name="clicked" handler="save_and_quit"/>
+                                        <style>
+                                            <class name="image-button"/>
+                                        </style>
+                                        <child>
+                                            <object class="GtkImage">
+                                                <property name="visible">True</property>
+                                                <property name="icon-name">document-save-as-symbolic</property>
+                                            </object>
+                                        </child>
+                                    </object>
+                                </child>
+                                <child>
+                                    <object class="GtkSeparator">
+                                        <property name="visible">True</property>
+                                        <property name="orientation">vertical</property>
+                                    </object>
+                                </child>
+                            </object>
+                        </child>
+                    </object>
+                    <packing>
+                        <property name="pack_type">end</property>
+                    </packing>
+                </child>
             </object>
         </child>
         <child>
@@ -54,8 +92,9 @@
                 <property name="show_tabs">False</property>
                 <property name="show_border">False</property>
                 <child>
-                    <object class="GtkScrolledWindow" id="previewport">
+                    <object class="GtkBox">
                         <property name="visible">True</property>
+                        <property name="homogeneous">True</property>
                         <child>
                             <object class="GtkImage" id="preview"></object>
                         </child>
