Add prev and next buttons to DisplayFile

--- a/data/gtk/files.ui
+++ b/data/gtk/files.ui
@@ -54,6 +54,18 @@
     <child>
       <object class="GtkActionBar">
         <child>
+          <object class="GtkButton" id="prev_button">
+            <style>
+              <class name="image-button"/>
+            </style>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-name">go-previous-symbolic</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
           <object class="GtkBox">
             <property name="orientation">horizontal</property>
             <property name="spacing">6</property>
@@ -90,6 +102,18 @@
                     </child>
                   </object>
                 </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="next_button">
+            <style>
+              <class name="image-button"/>
+            </style>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-name">go-next-symbolic</property>
               </object>
             </child>
           </object>
