Source tree cleanup
* Move GTK widgets out of src/gtk-widgets.vala and into their own folder
* Shuffle around module-related sources to ease tab-completion
* Some automake spring cleaning

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -1,5 +1,5 @@
 <interface>
-  <template class="ValhallaWidgetsMainWindow" parent="GtkApplicationWindow">
+  <template class="ValhallaWidgetsWindow" parent="GtkApplicationWindow">
     <property name="width_request">700</property>
     <property name="height_request">600</property>
     <child type="titlebar">
