--- a/src/valhalla/gtk/window.ui
+++ b/src/valhalla/gtk/window.ui
@@ -3,157 +3,98 @@
     <property name="width_request">700</property>
     <property name="height_request">600</property>
     <child type="titlebar">
-      <object class="GtkStack" id="headerbar_stack">
-        <property name="transition-type">crossfade</property>
+      <object class="GtkHeaderBar">
+        <property name="show-close-button">True</property>
         <child>
-          <object class="GtkHeaderBar" id="main_headerbar">
-            <property name="show-close-button">True</property>
+          <object class="GtkBox">
+            <property name="orientation">horizontal</property>
+            <property name="spacing">0</property>
             <child>
-              <object class="GtkBox">
-                <property name="orientation">horizontal</property>
-                <property name="spacing">0</property>
-                <child>
-                  <object class="GtkRevealer" id="back_reveal">
-                    <property name="transition-type">slide-right</property>
-                    <property name="reveal-child">false</property>
-                    <child>
-                      <object class="GtkBox">
-                        <property name="orientation">horizontal</property>
-                        <property name="spacing">6</property>
-                        <child>
-                          <object class="GtkButton">
-                            <signal name="clicked" handler="back_button_clicked"/>
-                            <style>
-                              <class name="image-button"/>
-                            </style>
-                            <child>
-                              <object class="GtkImage">
-                                <property name="icon-name">go-previous-symbolic</property>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkSeparator">
-                            <property name="orientation">vertical</property>
-                            <property name="margin-right">6</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="margin-right">6</property>
-                    <signal name="clicked" handler="upload_clicked"/>
-                    <style>
-                      <class name="image-button"/>
-                    </style>
-                    <child>
-                      <object class="GtkImage">
-                        <property name="icon-name">document-send-symbolic</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <signal name="clicked" handler="capture_screenshot"/>
-                    <style>
-                      <class name="image-button"/>
-                    </style>
-                    <child>
-                      <object class="GtkImage">
-                        <property name="icon-name">video-display-symbolic</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="title">
-              <object class="GtkStackSwitcher">
-                <property name="stack">main_window_stack</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkRevealer" id="context_revealer">
-                <property name="transition-type">slide-right</property>
-                <property name="reveal-child">true</property>
-                <child>
-                  <object class="GtkToggleButton">
-                    <signal name="toggled" handler="context_toggle"/>
-                    <style>
-                      <class name="image-button"/>
-                    </style>
-                    <child>
-                      <object class="GtkImage">
-                        <property name="icon-name">object-select-symbolic</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="pack-type">end</property>
-              </packing>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkHeaderBar" id="selection_headerbar">
-            <property name="show-close-button">True</property>
-            <style>
-              <class name="selection-mode"/>
-            </style>
-            <child>
-              <object class="GtkButton" id="delete_button">
-                <property name="sensitive">false</property>
-                <style>
-                  <class name="image-button"/>
-                </style>
-                <child>
-                  <object class="GtkImage">
-                    <property name="icon-name">user-trash-symbolic</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkRevealer" id="delete_progress_reveal">
+              <object class="GtkRevealer" id="back_reveal">
                 <property name="transition-type">slide-right</property>
                 <property name="reveal-child">false</property>
                 <child>
-                  <object class="GtkSpinner">
-                    <property name="active">true</property>
+                  <object class="GtkBox">
+                    <property name="orientation">horizontal</property>
+                    <property name="spacing">6</property>
+                    <child>
+                      <object class="GtkButton">
+                        <signal name="clicked" handler="back_button_clicked"/>
+                        <style>
+                          <class name="image-button"/>
+                        </style>
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">go-previous-symbolic</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkSeparator">
+                        <property name="orientation">vertical</property>
+                        <property name="margin-right">6</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
             </child>
-            <child type="title">
-              <object class="GtkLabel" id="selection_indicator">
-                <property name="label">0 files selected</property>
-              </object>
-            </child>
             <child>
-              <object class="GtkToggleButton" id="deselect_button">
-                <property name="active">true</property>
-                <signal name="toggled" handler="select_toggle_off"/>
+              <object class="GtkButton">
+                <property name="margin-right">6</property>
+                <signal name="clicked" handler="upload_clicked"/>
                 <style>
                   <class name="image-button"/>
                 </style>
                 <child>
                   <object class="GtkImage">
-                    <property name="icon-name">object-select-symbolic</property>
+                    <property name="icon-name">document-send-symbolic</property>
                   </object>
                 </child>
               </object>
-              <packing>
-                <property name="pack-type">end</property>
-              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <signal name="clicked" handler="capture_screenshot"/>
+                <style>
+                  <class name="image-button"/>
+                </style>
+                <child>
+                  <object class="GtkImage">
+                    <property name="icon-name">video-display-symbolic</property>
+                  </object>
+                </child>
+              </object>
             </child>
           </object>
+        </child>
+        <child type="title">
+          <object class="GtkStackSwitcher">
+            <property name="stack">main_window_stack</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkRevealer" id="transfers_clear_revealer">
+            <property name="transition-type">slide-right</property>
+            <property name="reveal-child">false</property>
+            <child>
+              <object class="GtkButton">
+                <signal name="clicked" handler="transfers_clear"/>
+                <style>
+                  <class name="image-button"/>
+                </style>
+                <child>
+                  <object class="GtkImage">
+                    <property name="icon-name">edit-clear-all-symbolic</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="pack-type">end</property>
+          </packing>
         </child>
       </object>
     </child>
